# rios

./: .flake8  .gitignore  .hgchurn  CHANGES.txt  CreateDistribution.txt  INSTALL.txt  MANIFEST.in  README.md  future.pyproject.toml  pyproject.toml  requirements.readthedocs.txt  setup.py
.github/workflows/: python-app.yml
doc/source/: MultiComputeCase.dia  MultiMachineCase.dia  ReadworkerOnlyCase.dia  applierexamples.rst  awsbatch.rst  concurrency.rst  concurrencydiagrams.rst  conf.py  environmentvars.rst  index.rst  releasenotes.rst  rios_applier.rst  rios_calcstats.rst  rios_colortable.rst  rios_computemanager.rst  rios_cuiprogress.rst  rios_fileinfo.rst  rios_imageio.rst  rios_imagereader.rst  rios_imagewriter.rst  rios_inputcollection.rst  rios_parallel.rst  rios_parallel_aws_batch.rst  rios_parallel_jobmanager.rst  rios_parallel_subproc.rst  rios_pixelgrid.rst  rios_rat.rst  rios_ratapplier.rst  rios_readerinfo.rst  rios_rioserrors.rst  rios_riostests.rst  rios_structures.rst  rios_vectorreader.rst
rios/: CreateDistribution.txt  INSTALL.txt  LICENSE.txt  MANIFEST  MANIFEST.in  __init__.py  applier.py  calcstats.py  colortable.py  computemanager.py  cuiprogress.py  fileinfo.py  go.sh  imageio.py  imagereader.py  imagewriter.py  inputcollection.py  pixelgrid.py  rat.py  ratapplier.py  readerinfo.py  rioserrors.py  setup.py  structures.py  svn-commit.tmp  vectorreader.py
rios/cmdline/: __init__.py  rios_computeworker.py  rioscalcstats.py  riosprintstats.py
rios/doc/source/: applierexamples.rst  conf.py  create_doc.py  environmentvars.rst  index.rst  releasenotes.rst  rios_cmdline.rst  rios_cuiprogress.rst  rios_imagereader.rst  rios_imagewriter.rst  rios_inputcollection.rst  rios_parallel.rst  rios_parallel_jobmanager.rst  rios_ratapplier.rst  rios_readerinfo.rst  rios_rioserrors.rst  rios_vectorreader.rst
rios/parallel/: cloudpickle.py  jobmanager.py
rios/parallel/aws/: README.md  __init__.py  batch.py
rios/parallel/aws/templates/: Dockerfile  Dockerfile.main  Makefile  README.md  batch.yaml  build_and_push_main.sh  createbatch.py  deletebatch.py  print_ecr_path.py  submitmain.py
rios/rios/: __init__.py  applier.py  calcstats.py  cuiprogress.py  fileinfo.py  imageio.py  imagereader.py  imagewriter.py  inputcollection.py  pixelgrid.py  rat.py  ratapplier.py  readerinfo.py  rioserrors.py  vectorreader.py
rios/rios/cmdline/: rioscalcstats.py
rios/rios/parallel/: jobmanager.py
rios/rios/parallel/cloud_playdoh/: __init__.py  cloudpickle.py
rios/rios/parallel/mpi/: __init__.py  applier.py
rios/rios/parallel/multiprocessing/: __init__.py  applier.py
rios/rios/riostests/: riostestutils.py  testavgmpi.py  testavgmulti.py  testcoords.py  testlayerselection.py  testrat.py  testratapplier.py  testratstats.py  teststats.py  testvector.py
rios/riostests/: medianConcTest.py  riostestutils.py  testapplyreturn.py  testavg.py  testavgmpi.py  testavgmulti.py  testavgsubproc.py  testavgthreads.py  testbeforeclose.py  testcolortable.py  testcoords.py  testfootprint.py  testlayerselection.py  testoverlap.py  testpyramids.py  testrat.py  testratapplier.py  testratcolortable.py  testratstats.py  testreaderinfo.py  testreproj.py  testresample.py  testsetinputnull.py  testsigned8bit.py  teststats.py  testvector.py
tools/awsbatch/: Dockerfile  Makefile  README.md  batch.yaml  createbatch.py  deletebatch.py
